# CodexHub

./: .gitignore  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.mjs  vitest.config.ts
.agents/skills/codexhub-maintainer/: SKILL.md
.agents/skills/codexhub-maintainer/agents/: openai.yaml
.github/workflows/: build-linux-release.yml  build-macos-preview.yml  build-macos-release.yml  build-windows-release.yml  ci.yml
docs/: architecture.md  desktop-command-boundaries.md  feedback-error-handling.md  known-limitations.md  linux-support.md  macos-support.md  mvp-scope.md  public-scope.md  release-channels.md  release-checklist.md  research.md  stable-updater.md  storage-migrations.md
docs/zh-CN/: README.md  csdn-promo-blog.md
scripts/: api-boundary-test.mjs  audit-public-scope.mjs  bindings-test.mjs  check-release-exe.ps1  create-linux-updater-feed.mjs  create-macos-updater-feed.mjs  create-updater-tauri-config.mjs  create-windows-updater-feed.mjs  i18n-boundary-test.mjs  mock-dev.mjs  mock-smoke-test.mjs  package-portable.ps1  smoke-test.mjs  validate-release.ps1
src/: App.tsx  api.ts  main.tsx  models.ts  platform.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_runtime.rs  backend_tests.rs  contracts.rs  domain.rs  hosts.rs  jobs.rs  lib.rs  main.rs  platform.rs  profiles.rs  resource_monitor.rs  settings.rs  skills.rs  ssh.rs  tasks.rs  updater.rs
src-tauri/src/adapters/: credentials.rs  events.rs  mod.rs
src-tauri/src/commands/: host_ssh.rs  mod.rs  profiles.rs  settings.rs  skills.rs  storage.rs  tasks.rs  updater.rs
src-tauri/src/services/: codex_runtime.rs  credentials.rs  host_operations.rs  host_use_cases.rs  mod.rs  profile_catalog.rs  profile_links.rs  profile_operations.rs  profile_use_cases.rs  skill_operations.rs  skill_use_cases.rs  storage_operations.rs  updater_operations.rs
src-tauri/src/storage/: json_store.rs  mod.rs  paths.rs  task_store.rs  transaction.rs
src/api/: commands.ts  contracts.ts  desktop.test.ts  desktop.ts  fallbacks.ts  index.ts  invoke.test.ts  invoke.ts  mock.test.ts  mock.ts  normalize.test.ts  normalize.ts  runtime.test.ts  runtime.ts
src/app/: bootstrap.ts
src/test/: setup.ts
src/ui/: AlertModalFrame.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  ConfirmDialog.tsx  HostStatusIndicator.test.tsx  ModalFrame.test.tsx  ModalFrame.tsx  MonitorGpuMemory.test.ts  MonitorRefreshPolicy.test.ts  OperationProgress.test.tsx  OperationProgress.tsx  ProfileApplyFlow.test.tsx  SkillsView.test.tsx  TaskDrawer.test.tsx  TaskDrawer.tsx  TasksView.test.tsx  feedback.test.tsx  feedback.tsx
