[package]
name = "codexhub"
version = "0.1.0"
description = "Windows desktop control plane for Codex App SSH workflows"
authors = ["CodexHub"]
edition = "2021"

[lib]
name = "codexhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "time"] }
