[package]
name = "codexhub"
version = "0.2.0"
description = "Windows desktop control plane for Codex App SSH workflows"
authors = ["CodexHub"]
edition = "2021"

[lib]
name = "codexhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
flate2 = "1"
keyring = { version = "3", features = ["windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
