[package]
name = "codexhub"
version = "0.4.2"
description = "Windows desktop control plane for Codex App SSH workflows"
authors = ["CodexHub"]
edition = "2021"

[lib]
name = "codexhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
toml = "0.8"
flate2 = "1"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
tar = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2"
